--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,11 @@ __pycache__/
 
 test_*.py
 
+# Ignore environment variables
+.env
+.env.local
+.env.production
+
 # Ignore everything except the main project files and folders
 # (requirements.txt, app.py, README.md, vercel.json, templates/, static/)
 # Uncomment the following if you want to ignore all files by default and then whitelist
